plugins {
    id 'java-library'
}

group = 'org.example'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.2.0'
    api 'org.apache.logging.log4j:log4j-api:2.23.1'
    api 'org.apache.logging.log4j:log4j-core:2.23.1'
    implementation 'org.xerial:sqlite-jdbc:3.42.0.0'
    implementation 'org.springframework.security:spring-security-crypto:6.1.2'
    implementation 'commons-logging:commons-logging:1.2'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ['--add-reads', 'ProiectJava=ALL-UNNAMED']
}

test {
    useJUnitPlatform()
}